# quotes-and-trades-extractor

./: .gitignore  Cargo.toml  README.md  deploy.sh  sqlx-data.json
configuration/: configs.json  local.yaml
entrypoints/: binance_coin_extractor_entrypoint.sh  binance_spot_extractor_entrypoint.sh  binance_stable_extractor_entrypoint.sh  bitmex_extractor_entrypoint.sh  bitstamp_extractor_entrypoint.sh  coinbase_extractor_entrypoint.sh  deribit_extractor_entrypoint.sh  exchange_extractor_entrypoint.sh  ftx_extractor_entrypoint copy.sh  ftx_extractor_entrypoint.sh  kraken_extractor_entrypoint.sh  kraken_futures_extractor_entrypoint.sh  okx_extractor_entrypoint.sh
scripts/: config_on_aws.sh  first_deploy.sh  misc.sh
services/: binance-coin-extractor.service  binance-spot-extractor.service  binance-stable-extractor.service  bitmex-extractor.service  bitstamp-extractor.service  coinbase-extractor.service  deribit-extractor.service  exchange-extractor.service  ftx-extractor.service  kraken-extractor.service  kraken-futures-extractor.service  log-cpu-resources.service  okx-extractor.service
src/: binance_coin.rs  binance_spot.rs  binance_stable.rs  bitmex.rs  bitmex_weird.rs  bitstamp.rs  coinbase.rs  configuration.rs  deribit.rs  ftx.rs  kraken.rs  kraken_futures.rs  main.rs  okx.rs  worker_manager.rs
src/commands/: binance_subscribe.rs  bitmex_subscribe.rs  bitstamp_subscribe.rs  coinbase_subscribe.rs  deribit_subscribe.rs  ftx_subscribe.rs  kraken_futures_subscribe.rs  kraken_subscribe.rs  mod.rs  okx_subscribe.rs
src/configs/: configuration.rs
src/custom_deserializers/: mod.rs  quotes_and_trades_deserializer.rs
src/custom_parsers/: bitmex_parser.rs  mod.rs
src/data_extractors/: binance_coin_websocket.rs  binance_spot_websocket.rs  binance_stable_websocket.rs  bitmex_websocket.rs  bitstamp_websocket.rs  coinbase_websocket.rs  deribit_websocket.rs  ftx_websocket.rs  kraken_futures_websocket.rs  kraken_websocket.rs  mod.rs  okx_websocket.rs
src/models/: bitmex_models.rs  mod.rs
src/processes/: binance_coin_process.rs  binance_spot_process.rs  binance_stable_process.rs  bitmex_process.rs  bitstamp_process.rs  coinbase_process.rs  deribit_process.rs  ftx_process.rs  kraken_futures_process.rs  kraken_process.rs  mod.rs  okx_process.rs
src/services/: get_instruments.rs  mod.rs
src/utils/: instrument_info.rs  mod.rs  path_info.rs  worker_manager.rs
src/workers/: base_worker.rs  bitmex_worker.rs  mod.rs
