[package]
name = "exchange-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coinbase"
path = "src/coinbase.rs"

[[bin]]
name = "bitmex"
path = "src/bitmex.rs"

[[bin]]
name = "deribit"
path = "src/deribit.rs"

[[bin]]
name = "ftx"
path = "src/ftx.rs"

[[bin]]
name = "kraken"
path = "src/kraken.rs"


[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = {version = "0.16", features = ["stream", "default", "connect", "native-tls", "native-tls-vendored", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "__rustls-tls"]}
hyper = "0.14"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
# Configs
config = { version = "0.11", default-features = false, features = ["yaml"] }
##################
# CoinBase
# coinbase-pro-rs = "0.7.1"
# tokio = { version = "1.0.2", features = ["full"] }
# futures = "0.3.8"
##################
# # Scheduler
# # Web Scrapping
# tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
# reqwest = { version = "0.11", features = ["json"] }
# url = "2.2.2"
# serde = { version = "1.0", features = ["derive"] }
# futures = "0.3"
# # Scheduler
# tokio-cron-scheduler = "0.3.1"
# # Misc
# chrono = "0.4"
# # Get config file
# # config = { version = "0.11", default-features = false, features = ["yaml"] }
